@@ -1,7 +1,7 @@
-// 1.20.1	2024-02-11T23:42:56.789224	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (mob_effects), Tags (enchantments), Tags (traits), Patchouli Provider]
+// 1.20.1	2024-02-12T00:30:22.69391	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (mob_effects), Tags (enchantments), Tags (traits), Patchouli Provider]
 d70fdb86a9e889383707aa03fd2b7c8f3faa74cc assets/l2hostility/blockstates/hostility_spawner.json
-14807246ee33e688f4f6811a4c855a0e8ac187e9 assets/l2hostility/lang/en_ud.json
-90668a52ed5dd7195011e484907a82444550ebb4 assets/l2hostility/lang/en_us.json
+ce63b5d09c39daa2e1856f713722ec4a1098bbbb assets/l2hostility/lang/en_ud.json
+8e19e6c8f0f9969ceebb9eb4a3ff9383899bbb3f assets/l2hostility/lang/en_us.json
 55c31fd97776999c18d0f2503db0ab0f48f978ca assets/l2hostility/models/block/hostility_spawner.json
 de5c51bce5800765c4480502c92b16feb891e135 assets/l2hostility/models/block/hostility_spawner_activated.json
 4fc08943953876aaddfa8b72bdf177b446377ce1 assets/l2hostility/models/block/hostility_spawner_clear.json
@@ -150,6 +150,10 @@ d89c5a52d1a034bbf27d94dfc6d88aefda4c5e53 data/l2hostility/advancements/recipes/m
 e3f2e16976b94317d9840442c2d815c84db5003c data/l2hostility/advancements/recipes/misc/bottle_of_sanity_renew.json
 a333c3fd6aed14a15c7adcde201b1bff7027ae17 data/l2hostility/advancements/recipes/misc/chaos_ingot.json
 8c8e4bf9575ea43438bfa8d0c5b74a80c2de6c69 data/l2hostility/advancements/recipes/misc/chaos_ingot_recycle.json
+8e239bd7b0ddfb3cd76f9fff1e9f236caa41973a data/l2hostility/advancements/recipes/misc/charm_of_looting_1.json
+3ff3f79a810fda3238b075e8f7e167850150225e data/l2hostility/advancements/recipes/misc/charm_of_looting_2.json
+5c7c8fd5a20ec53367eafa53b42dad1e10335582 data/l2hostility/advancements/recipes/misc/charm_of_looting_3.json
+8ffb1e64593bafa722b208406a407030824f37f2 data/l2hostility/advancements/recipes/misc/charm_of_looting_4.json
 9b7df225c05b17eb1f5a750cd96559e6b28a6e31 data/l2hostility/advancements/recipes/misc/curse_of_envy.json
 c79596e18c1057924b7f98171162e963d54b662e data/l2hostility/advancements/recipes/misc/curse_of_gluttony.json
 5f9cb67c64677aa8fea071ba99e8c77a513afbd0 data/l2hostility/advancements/recipes/misc/curse_of_greed.json
@@ -199,6 +203,10 @@ a7dbfd4231a99589de68224a4d6929be82619a43 data/l2hostility/recipes/bottle_of_sani
 7120f3e81e10b72bf570e7f49f3851882ffa6c2f data/l2hostility/recipes/bottle_of_sanity_renew.json
 aee9f7b2d428709b097b8936ff2c29573d3e79d2 data/l2hostility/recipes/chaos_ingot.json
 379097710b7031203eac65e7f7da043c5c790277 data/l2hostility/recipes/chaos_ingot_recycle.json
+10727f443633ae59ecda9c05aa10e1c1cad75c99 data/l2hostility/recipes/charm_of_looting_1.json
+8369d0139cb601c4a7861fb3106bfe8691229a78 data/l2hostility/recipes/charm_of_looting_2.json
+fa0c8dd65513af4e909d2de7e37c0ea98156473e data/l2hostility/recipes/charm_of_looting_3.json
+5181c4922b4b343aee1c2335744bd139b8abbfca data/l2hostility/recipes/charm_of_looting_4.json
 869f014fe44abfc4dd718b14827047ee5c4d60d9 data/l2hostility/recipes/curse_of_envy.json
 9a2b77592e8b6c101a999d33251671a2cce25102 data/l2hostility/recipes/curse_of_gluttony.json
 2346ff0bc922b6cffb51930aad5ba429ce099d6c data/l2hostility/recipes/curse_of_greed.json
