@@ -83,10 +83,10 @@
   "item.l2hostility.bottle_of_curse": "ǝsɹnƆ ɟO ǝןʇʇoᗺ",
   "item.l2hostility.bottle_of_sanity": "ʎʇıuɐS ɟO ǝןʇʇoᗺ",
   "item.l2hostility.chaos_ingot": "ʇobuI soɐɥƆ",
-  "item.l2hostility.charm_of_looting_1": "Ɩ˙ʌꞀ buıʇooꞀ ɟo ɯɹɐɥƆ",
-  "item.l2hostility.charm_of_looting_2": "ᄅ˙ʌꞀ buıʇooꞀ ɟo ɯɹɐɥƆ",
-  "item.l2hostility.charm_of_looting_3": "Ɛ˙ʌꞀ buıʇooꞀ ɟo ɯɹɐɥƆ",
-  "item.l2hostility.charm_of_looting_4": "ㄣ˙ʌꞀ buıʇooꞀ ɟo ɯɹɐɥƆ",
+  "item.l2hostility.charm_of_looting_1": "ɯɹɐɥƆ buıʇooꞀ pǝɥsıןodu∩",
+  "item.l2hostility.charm_of_looting_2": "ɯɹɐɥƆ buıʇooꞀ ןɐɔıbɐW",
+  "item.l2hostility.charm_of_looting_3": "ɯɹɐɥƆ buıʇooꞀ ɔıʇoɐɥƆ",
+  "item.l2hostility.charm_of_looting_4": "ɯɹɐɥƆ buıʇooꞀ snoןnɔɐɹıW",
   "item.l2hostility.curse_of_envy": "ʎʌuƎ ɟO ǝsɹnƆ",
   "item.l2hostility.curse_of_gluttony": "ʎuoʇʇnן⅁ ɟO ǝsɹnƆ",
   "item.l2hostility.curse_of_greed": "pǝǝɹ⅁ ɟO ǝsɹnƆ",
@@ -179,6 +179,7 @@
   "l2hostility.item.equipment.flame_thorn": "%ss ɹoɟ 'sɐɥ qoɯ ʇɐɥʇ sʇɔǝɟɟǝ ɟo ɹǝqɯnu ןɐʇoʇ oʇ sןɐnbǝ ןǝʌǝן ɥʇıʍ ǝɯɐןℲ ןnoS ʇɔıןɟuı 'qoɯ ɐ ǝbɐɯɐp noʎ uǝɥM",
   "l2hostility.item.equipment.glasses": "sʇɔǝɟɟǝ ssǝuʞɹɐp ɹo ssǝupuıןq ǝʌɐɥ noʎ uǝɥʍ sqoɯ ǝǝs puɐ 'sqoɯ ǝןqısıʌuı ǝǝs oʇ noʎ ʍoןןⱯ",
   "l2hostility.item.equipment.imagine_breaker": "˙uoıʇɔǝʇoɹd ןɐɔıbɐɯ ssɐdʎq ǝbɐɯɐp ǝǝןǝɯ ɹnoʎ ןןⱯ",
+  "l2hostility.item.equipment.looting": "˙ןıɐʇǝp ɹoɟ IƎſ ʞɔǝɥƆ ˙sdoɹp ʇıɐɹʇ ʎʇıןıʇsoɥ ǝɯos sǝןqɐuƎ",
   "l2hostility.item.equipment.nidhoggur": "ןǝʌǝן qoɯ ɹǝd ʇooן %s%%+ doɹp ןןıʍ ןןıʞ noʎ sqoW",
   "l2hostility.item.equipment.platinum_star": "˙uʍop ןooɔ ǝbɐɯɐp ssɐdʎq ǝbɐɯɐp ǝǝןǝɯ ɹnoʎ ןןⱯ",
   "l2hostility.item.equipment.pocket_of_restoration": "˙pǝɥsıuıɟ uǝɥʍ ʞɔɐq ʇı ʇnd puɐ 'ʇı ןɐǝsun 'ǝpısuı ɯǝʇı pǝןɐǝs ʇnd ʎןןɐɔıʇɐɯoʇnⱯ",
