@@ -83,10 +83,10 @@
   "item.l2hostility.bottle_of_curse": "Bottle Of Curse",
   "item.l2hostility.bottle_of_sanity": "Bottle Of Sanity",
   "item.l2hostility.chaos_ingot": "Chaos Ingot",
-  "item.l2hostility.charm_of_looting_1": "Charm of Looting Lv.1",
-  "item.l2hostility.charm_of_looting_2": "Charm of Looting Lv.2",
-  "item.l2hostility.charm_of_looting_3": "Charm of Looting Lv.3",
-  "item.l2hostility.charm_of_looting_4": "Charm of Looting Lv.4",
+  "item.l2hostility.charm_of_looting_1": "Unpolished Looting Charm",
+  "item.l2hostility.charm_of_looting_2": "Magical Looting Charm",
+  "item.l2hostility.charm_of_looting_3": "Chaotic Looting Charm",
+  "item.l2hostility.charm_of_looting_4": "Miraculous Looting Charm",
   "item.l2hostility.curse_of_envy": "Curse Of Envy",
   "item.l2hostility.curse_of_gluttony": "Curse Of Gluttony",
   "item.l2hostility.curse_of_greed": "Curse Of Greed",
@@ -179,6 +179,7 @@
   "l2hostility.item.equipment.flame_thorn": "When you damage a mob, inflict Soul Flame with level equals to total number of effects that mob has, for %ss",
   "l2hostility.item.equipment.glasses": "Allow you to see invisible mobs, and see mobs when you have blindness or darkness effects",
   "l2hostility.item.equipment.imagine_breaker": "All your melee damage bypass magical protection.",
+  "l2hostility.item.equipment.looting": "Enables some hostility trait drops. Check JEI for detail.",
   "l2hostility.item.equipment.nidhoggur": "Mobs you kill will drop +%s%% loot per mob level",
   "l2hostility.item.equipment.platinum_star": "All your melee damage bypass damage cool down.",
   "l2hostility.item.equipment.pocket_of_restoration": "Automatically put sealed item inside, unseal it, and put it back when finished.",
