@@ -1,0 +1,24 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "category": "misc",
+  "key": {
+    "A": {
+      "item": "minecraft:gold_ingot"
+    },
+    "D": {
+      "item": "minecraft:copper_ingot"
+    },
+    "I": {
+      "item": "minecraft:emerald"
+    }
+  },
+  "pattern": [
+    " A ",
+    "DID",
+    " A "
+  ],
+  "result": {
+    "item": "l2hostility:charm_of_looting_1"
+  },
+  "show_notification": true
+}
