@@ -1,0 +1,26 @@
+package dev.xkmc.l2hostility.content.item.curio.misc;
+
+import dev.xkmc.l2complements.content.item.curios.CurioItem;
+import dev.xkmc.l2hostility.init.data.LHConfig;
+import dev.xkmc.l2hostility.init.data.LangData;
+import net.minecraft.ChatFormatting;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.level.Level;
+import org.jetbrains.annotations.Nullable;
+
+import java.util.List;
+
+public class LootingCharm extends CurioItem {
+
+	public LootingCharm(Properties properties) {
+		super(properties);
+	}
+
+	@Override
+	public void appendHoverText(ItemStack stack, @Nullable Level level, List<Component> list, TooltipFlag flag) {
+		list.add(LangData.LOOTING_CHARM.get().withStyle(ChatFormatting.GRAY));
+	}
+
+}
