@@ -101,6 +101,7 @@ public class LHConfig {
 		public final ForgeConfigSpec.DoubleValue prideHealthBonus;
 		public final ForgeConfigSpec.DoubleValue prideTraitFactor;
 		public final ForgeConfigSpec.DoubleValue wrathDamageBonus;
+		public final ForgeConfigSpec.BooleanValue disableHostilityLootCurioRequirement;
 
 		public final ForgeConfigSpec.IntValue hostilitySpawnCount;
 		public final ForgeConfigSpec.IntValue hostilitySpawnLevelFactor;
@@ -264,6 +265,8 @@ public class LHConfig {
 
 			builder.push("items");
 			{
+				disableHostilityLootCurioRequirement = builder.comment("Disable curio requirement for hostility loot")
+						.define("disableHostilityLootCurioRequirement", false);
 				bottleOfCurseLevel = builder.comment("Number of level to add when using bottle of curse")
 						.defineInRange("bottleOfCurseLevel", 50, 1, 1000);
 
