@@ -43,6 +43,10 @@
   "item.l2hostility.hostility_essence": "恶意精华",
   "item.l2hostility.miracle_ingot": "奇迹锭",
   "item.l2hostility.miracle_powder": "奇迹粉末",
+  "item.l2hostility.charm_of_looting_1": "粗糙抢夺宝珠",
+  "item.l2hostility.charm_of_looting_2": "魔能抢夺宝珠",
+  "item.l2hostility.charm_of_looting_3": "混沌抢夺宝珠",
+  "item.l2hostility.charm_of_looting_4": "奇迹抢夺宝珠",
   "block.l2hostility.hostility_spawner": "恶意刷怪笼",
   "trait.l2hostility.adaptive": "适应",
   "trait.l2hostility.adaptive.desc": "记忆最近收到的%2$s种伤害。每次受到记忆中的伤害时，对那个伤害叠加%s%%的减伤（无上限）",
@@ -146,6 +150,7 @@
   "l2hostility.patchouli.title": "莱特兰·恶意-教程与词条列表",
   "l2hostility.patchouli.landing": "这个模组提升了怪物数值，并添加了各种能力",
   "l2hostility.boss_event": "恶意清除进度：%s/%s",
+  "l2hostility.tooltip.lv": "Lv.%s",
   "l2hostility.tooltip.disable": "%s个附魔被抑制了，剩余%s秒。任何新附魔将会被抹消",
   "l2hostility.tooltip.self_effect": "怪物获得常驻效果：",
   "l2hostility.tooltip.target_effect": "怪物攻击将会施加：",
@@ -193,6 +198,7 @@
   "l2hostility.item.equipment.nidhoggur": "击杀怪物掉落的所有掉落物根据怪物等级每级增加+%s%%",
   "l2hostility.item.equipment.platinum_star": "你所有的近战伤害无视伤害冷却",
   "l2hostility.item.equipment.pocket_of_restoration": "自动收纳被封印的物品，将其解除封印后放回原位",
+  "l2hostility.item.equipment.looting": "击杀带部分词条的生物时掉落额外奖励。查看JEI了解详情",
   "l2hostility.item.book.copy": "在铁砧中和附魔书结合来复印",
   "l2hostility.item.book.everything_forbidden": "%s不可获取",
   "l2hostility.item.book.everything_invalid": "当前物品名字不是附魔ID",
@@ -288,6 +294,5 @@
   "advancements.l2hostility.advancements.hostility.wrath.description": "获得暴怒诅咒",
   "advancements.l2hostility.advancements.hostility.wrath.title": "复仇时刻",
   "advancements.l2hostility.advancements.hostility.lust.description": "获得色欲诅咒",
-  "advancements.l2hostility.advancements.hostility.lust.title": "赤裸尸体",
-  "l2hostility.tooltip.lv": "Lv.%s"
+  "advancements.l2hostility.advancements.hostility.lust.title": "赤裸尸体"
 }
