@@ -91,7 +91,8 @@
 		"abrahadabra": "当一个怪物携带的词条试图对你施加词条效果时，将其施加在周围所有对你有敌意的生物上作为替代",
 		"nidhoggur": "击杀怪物掉落的所有掉落物根据怪物等级每级增加+%s%%",
 		"platinum_star": "你所有的近战伤害无视伤害冷却",
-		"pocket_of_restoration": "自动收纳被封印的物品，将其解除封印后放回原位"
+		"pocket_of_restoration": "自动收纳被封印的物品，将其解除封印后放回原位",
+		"looting": "击杀带部分词条的生物时掉落额外奖励。查看JEI了解详情"
 	  },
 	  "book": {
 		"copy": "在铁砧中和附魔书结合来复印",
